fix align item of header top

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,6 +112,7 @@ a{
 .header-top{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 30px;
 }
 
